# tagLID

./: README.md  pyproject.toml  requirements.txt  sample.xlsx
src/taglid/: __init__.py  lid.py  lid_dataset.py
src/taglid/helpers/: load.py
src/taglid/resources/: abbr.json  untj.txt
src/taglid/resources/freqlist/: eng_freqlist.csv  generate_freqlist.py  tgl_freqlist.csv
src/taglid/resources/freqlist/excluded/: locations.txt  names.txt
src/taglid/resources/freqlist/included/: eng_cont.txt  eng_intj.txt  eng_other.txt  tgl_cont.txt  tgl_intj.txt  tgl_other.txt
src/taglid/resources/freqlist/original/: tgl_freqlist.csv
src/taglid/resources/slang/: eng_slang.txt  tgl_slang.txt
tests/: test_lid.py
tests/test_lid_dataset/: sample_labeled.xlsx
