[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "taglid"
dynamic = ["version"]
description = "A Word level Language Identification (LID) tool for Tagalog-English (Taglish) text."
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Andrian Lloyd Maagma", email = "maagmaandrian@gmail.com"}
]
keywords = ["Language Identification", "LID", "Taglish", "Code-switching", "Code-mixed", "Tagalog", "English"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "lemminflect>=0.2.3",
  "nltk>=3.8.1",
  "openpyxl>=3.1.5",
  "pandas>=2.2.2",
  "symspellpy>=6.7.7",
  "tabulate>=0.9.0",
  "tglstemmer @ git+https://github.com/andrianllmm/tagalog-stemmer.git@main",
]

[project.optional-dependencies]
dev = ["twine>=5.1.1"]
test = ["pytest>=8.3.2", "mypy>=1.11.0"]

[project.urls]
homepage = "https://github.com/andrianllmm/taglid"
issues = "https://github.com/andrianllmm/taglid/issues"

[tool.setuptools]
package-data = {"taglid" = ["resources/*.txt", "resources/*.json", "resources/freqlist/*.csv", "resources/slang/*.txt"]}

[tool.setuptools.dynamic]
version = {attr = "taglid.__version__"}
